[gd_scene load_steps=16 format=2]

[ext_resource path="res://Enemies/Troll3/Troll3_sprite_sheet.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Troll1.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Hurtbox.gd" type="Script" id=3]
[ext_resource path="res://Scripts/Hitbox.gd" type="Script" id=4]
[ext_resource path="res://Assets/Sounds/Male Hurt/Troll/1.wav" type="AudioStream" id=5]
[ext_resource path="res://Assets/Sounds/Male Hurt/Troll/5.wav" type="AudioStream" id=6]

[sub_resource type="CapsuleShape2D" id=6]
radius = 44.0
height = 10.5

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 24.4375, 41.5 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 26, 41.5 )

[sub_resource type="CapsuleShape2D" id=7]
radius = 23.0
height = 54.0

[sub_resource type="Animation" id=10]
resource_name = "Hurt"
length = 0.3
step = 0.03
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.03, 0.06, 0.09, 0.12, 0.15, 0.18, 0.21, 0.24, 0.27 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 30, 31, 32, 33, 34, 35, 36, 37, 38, 39 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "hurt_finished"
} ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 0,
"values": [  ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/Hitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"values": [  ]
}

[sub_resource type="Animation" id=3]
resource_name = "attack"
length = 0.28
step = 0.03
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.03, 0.06, 0.09, 0.12, 0.15, 0.18, 0.21, 0.24, 0.27 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/Hitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.15, 0.27 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.27 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attack_finished"
} ]
}

[sub_resource type="Animation" id=4]
resource_name = "die"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 10, 11, 12, 13, 14, 15, 16, 17, 18, 19 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "lay_dead"
} ]
}

[sub_resource type="Animation" id=5]
resource_name = "walk"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 21, 21, 22, 23, 24, 25, 26, 27, 28, 29 ]
}

[node name="Troll3" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 1.25, 2.25 )
texture = ExtResource( 1 )
hframes = 10
vframes = 5
frame = 39

[node name="Hurtbox" type="Area2D" parent="Sprite"]
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/Hurtbox"]
position = Vector2( -3.25, 22.75 )
shape = SubResource( 6 )

[node name="Hitbox" type="Area2D" parent="Sprite"]
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/Hitbox"]
position = Vector2( 70.3125, 17.25 )
shape = SubResource( 8 )
disabled = true

[node name="PlayerDetect" type="Area2D" parent="Sprite"]
position = Vector2( -1.25, 21.75 )
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/PlayerDetect"]
position = Vector2( 74, -4.5 )
shape = SubResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 4, 28 )
shape = SubResource( 7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Hurt = SubResource( 10 )
anims/RESET = SubResource( 2 )
anims/attack = SubResource( 3 )
anims/die = SubResource( 4 )
anims/walk = SubResource( 5 )

[node name="EdgeDetectRight" type="RayCast2D" parent="."]
position = Vector2( 24, 48 )
enabled = true
cast_to = Vector2( 0, 48 )
collide_with_areas = true

[node name="EdgeDetectLeft" type="RayCast2D" parent="."]
position = Vector2( -24, 48 )
enabled = true
cast_to = Vector2( 0, 48 )
collide_with_areas = true

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="deathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="hurtSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[connection signal="body_entered" from="Sprite/Hitbox" to="." method="_on_Hitbox_body_entered"]
[connection signal="body_entered" from="Sprite/PlayerDetect" to="." method="_on_PlayerDetect_body_entered"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
